--- a/css/googleStyle.css
+++ b/css/googleStyle.css
@@ -4,9 +4,6 @@ body{
 a{
     text-decoration: none;
 }
-/* a:hover{
-    text-decoration: underline;
-} */
 .website{
     background: white;
     /* margin: 30px; */
@@ -15,7 +12,7 @@ a{
     /* flex-direction: row; */
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: 50px auto auto;
+    grid-template-rows: 50px 200px auto;
     /* justify-content: center; */
 }
 .nav-bar-left{
@@ -58,172 +55,34 @@ a{
     width: 100px;
     height: 40px;
     margin: 10px;
+    cursor: pointer;
 }
 
+/* .google-logo-container{
+    text-align: center;
+    position: relative;
+} */
 #google-logo{
-    display: block;
+    display:inline-block;
     height: auto;
-    width: 25%;
-    /* grid-area: 2 / 2 / span 1 / span 1; */
-    /* float:right; */
-    padding: 20px;
-    margin-left: auto;
+    width: 275px;
+    padding: 10px 0px;
+
+    /* position: relative; */
+    margin-left: 40%; 
     margin-right: auto;
+
+
     /* background: rgb(255, 238, 206); */
 
     /* background: url("https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"); */
 }
 
-#search-bar{
-    background: green;
-}
 
-li{
-    list-style: none;
-  }
-
-/* .hamburger{
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
-    /* min-height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px; 
-
-    
-} 
-/* .hamburger .nav-menu{
-    /* display: none; */
-    /* display: none; */
-    /* left: -100%; 
-
-} 
-
-.hamburger a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-.hamburger .nav-link{
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: none;
-    transition: 0.5s ease;
-}
-.hamburger .nav-link:hover{
-    text-decoration: none;
-    background-color: #ddd;
-    color: black;
-}
-
-.hamburger .home{
-    text-decoration: none;
-    font-size: 2rem;
-    background-color: #04AA6D;
-    color: white;
-}
- 
-
-
-/* .hamburger a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  } */
-  
-/* .hamburger a:hover {
-    background-color: #ddd;
-    color: black;
-  } */
-
-
-
-
-
-
- 
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-    border-radius: 70px;
-    margin: 5px;
-
-
-    /* justify-content: space-between;
-    align-items: center;
-    padding: 5px;  */
-    /* position: relative; */
-  }
-  
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #nav-links {
-    margin-top: 250px;
-    display: flex;
-    flex-direction: column;
-    display: none;
-  }
-  
-  /* Style navigation menu links */
-  .topnav .a-tag {
-    /* transform: translate(20px, 20px); */
-
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    /* display: block; */
-  }
-  .topnav .link {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    /* transform: translate(-100px, -100px); */
-  }
-  
-  /* Style the hamburger menu */
-  .topnav a.icon {
-    background: black;
-    display: block;
-    /* position: absolute; */
-    position: inherit;
-    /* right: 0;
-    top: 0; */
-  }
-  
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the active link (or home/logo) */
-  .active {
-    background-color: #04AA6D;
-    color: white;
-  }
 
 /* ___________________________________________________________________________________________________________________________________________________________ */
 
 
-#list-two{
-    /* display: none; */
-}
-
-.icon-two{
-    /* margin: 10px; */
-    /* color: white;
-    background: black; */
-    /* border-radius: 50px; */
-}
 
 #menu-button{
     /* background: black; */
@@ -250,9 +109,95 @@ li{
   } 
 
 .hamburger-menu{
-    display: grid;
-    grid-area: ;
+    display: none;
+    /* grid-area: 1 / 1 / span 2 / span 2; */
+    border: 1px solid grey;
+    border-radius: 3px;
+    text-align: center;
     height: 70px;
     width: 100px;
-    overflow-y:auto
+    overflow-y:auto;
+    overflow-x: auto;
+    padding: 0px;
+    background: white;
+    color: black;
+    float: right;
+    margin-left: auto;
+    margin-right: 100px;
+    /* position: sticky; */
+    /* z-index: 1000; */
+    
+    
+}
+
+li{
+    list-style: none;
+    /* list-style-position: outside; */
+  }
+
+  .search-container{
+
+    background: white;
+    margin: 30px;
+    height: 500px;
+    display: grid;
+    /* grid-template-areas: 3 2; */
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
+}
+
+
+.search-bar{
+    /* display: flexbox; */
+    grid-area: 1 / 1 / span 1 / span 2;
+    background: white;
+    border: 1px solid gray;
+    border-radius: 50px;
+    height: 40px;
+    width: 575px;
+    margin: 1% 25%;  
+    
+}
+.search-button{
+
+    /* display: block; */
+    cursor: pointer;
+    background: white;
+    width: 200px;
+    /* padding: auto; */
+    margin: 10px 100px;
+}
+#search-norm{
+    grid-area: 2 / 2 / span 1 / span 1;
+}
+#search-lucky{
+    grid-area: 2 / 3 / span 1 / span 1;
+}
+
+#grid-container{
+    background: white;
+    margin: 30px;
+    height: 500px;
+    display: grid;
+
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+
+
+
+
+
+}
+.grid-item{
+    color: black;
+    font-size: 25px;
+    text-align: center;
+    width: 70px;
+    line-height: 40px;
+    margin: 10px;
+}
+#one-grid{
+    grid-area: 1 / 1 / span 1 / span 3;
+    /* margin: auto; */
+    margin: 0% 45%;
 }
