--- a/css/webStyle.css
+++ b/css/webStyle.css
@@ -1,3 +1,4 @@
+html { font-size: 16px; }
 body{
     background: lightblue;
 }
@@ -26,6 +27,14 @@ a{
     text-align: center;
     align-items: center;
     color: white;
+    /* background-color: #04AA6D; */
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+.nav-links:hover{
+    background: gray;
 }
 .nav-right{
     display: flex;
@@ -35,21 +44,66 @@ a{
     text-align: center;
     align-items: center;
 }
-#nav-right-drop-down{
-    /* justify-content: flex-end;
-    text-align: center;
-    align-items: center; */
-}
 
-#body-1{
+.body-1{
     display: flex;
     flex-direction: column;
+    position: relative;
+    height: auto;
+    width: 100%;
+    flex-direction: column;
     align-items: center;
+    margin: 0px;
     background: rgb(255, 255, 255);
 
 }
-#twenty-two{
+.body-1 .p1{
+    position: relative;
+    /* z-index: 10; */
+    height: auto;
+    /* width: 100%; */
+    /* align-items: center; */
+    margin: 10px 0px;
+    background: rgb(255, 255, 255);
+    align-self: flex-start ;
+    flex-basis: 100px;
+}
+.body-1 .p2{
+    position: relative;
+    height: auto;
+    /* width: 100%; */
+    /* align-items: center; */
+    margin: 10px 0px;
+    background: rgb(255, 255, 255);
+    align-self: flex-end ;
+    flex-basis: 100px;
+}
+
+
+
+
+#body-2{
+    display: flex;
+    /* position: relative; */
+    /* z-index: 9; */
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: center;
+    background: rgb(255, 255, 255);
+
+}
+
+#body-3{
+    background: white;
+}
+#body-3 h2{
+    color: rgba(0, 79, 148, 0.694);
+}
+
+.twenty-two{
     font-size: 200px;
+    font-size: 20em;
     padding: 0px;
     margin: 0px;
     margin-top: auto;
@@ -58,4 +112,152 @@ a{
     background: linear-gradient(to right,red, green, steelblue, blue);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+#twenty-two{
+    position: absolute;
+    opacity: 50%;
+    z-index: 100;
+    /* font-size: 500px; */
+
+    /* 1rem is base html font size ie 16 set at top or default
+    vw is viewwidth, vh for view height
+    can use media queries to set step breakpoints for text sizing */
+    font-size: calc(1rem + 20vw);
+    /* text-align: center; */
+    /* justify-content: center; */
+    padding: 0px;
+    margin: 0px;
+    margin-top: auto;
+    /* text-align: center; */
+    /* color: linear-gradient(to right,red, green, steelblue, blue); */
+    background: linear-gradient(to right,red, green, steelblue, blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+/* Dropdown Button */
+.dropbtn {
+    background: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background: #3e8e41;}
+
+
+  .container{
+    /* background: white; */
+    height: 300px;
+    margin: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-item{
+    background: green;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin: 5px;
+    padding: 5px;
+    width: 50px;
+    line-height: 50px;
+    justify-content: center;
+
+}
+
+#hcl-image{
+    width: 200px;
+    height: auto;
+    background: black;
+    /* border: 5px solid black; */
+
+}
+
+
+.tic-tac-container{
+    display: grid;
+    /* width: auto; */
+    /* grid-auto-flow: column; */
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    /* align-content: center;
+    align-items: center;
+    align-self: center; */
+    background: grey;
+    /* margin-left: auto;
+    margin-right: auto; */
+}
+.tic-tac-block{
+
+    background: yellow;
+    font-size: 25px;
+    text-align: center;
+    width: 70px;
+    line-height: 40px;
+    /* margin: 10px; */
+}
+#tic-tac-1{
+    background: red;
+}
+#tic-tac-2{
+    background: red;
+    grid-area: 2 / 2 / 2 / 2;
+}
+#tic-tac-3{
+    background: red;
+}
+#tic-tac-4{
+    background: red;
+}
+#tic-tac-5{
+    background: red;
+}
+#tic-tac-6{
+    background: red;
+
+}
+#tic-tac-7{
+    background: red;
+}
+#tic-tac-8{
+    background: red;
+    grid-area: 3 / 2 / span 1 / span 1;
+}
+#tic-tac-9{
+    background: red;
 }
