--- a/css/webStyle.css
+++ b/css/webStyle.css
@@ -1,6 +1,8 @@
 html { font-size: 16px; }
 body{
+    background-size: cover;
     background: lightblue;
+
 }
 a{
     text-decoration: none;
@@ -209,55 +211,96 @@ a{
 }
 
 
+
 .tic-tac-container{
+    /* margin: 30px; */
+    max-height: 600px;
+    max-width: 600px;
     display: grid;
     /* width: auto; */
     /* grid-auto-flow: column; */
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
-    /* align-content: center;
-    align-items: center;
-    align-self: center; */
+    /* place-items: center; */
     background: grey;
+     /* justify-content: space-evenly; */
     /* margin-left: auto;
     margin-right: auto; */
+    /* grid-template-areas: "tic-tac-1   tic-tac-1   tic-tac-1"
+                       "tic-tac-1     tic-tac-1     tic-tac-1"
+                       "tic-tac-1   tic-tac-1   tic-tac-1"; */
 }
 .tic-tac-block{
-
-    background: yellow;
+    display: grid;
+    max-height: 200px;
+    max-width: 200px;
+    min-height: 100px;
+    min-width: 100px;
+    background: black;
     font-size: 25px;
     text-align: center;
-    width: 70px;
-    line-height: 40px;
-    /* margin: 10px; */
-}
-#tic-tac-1{
-    background: red;
-}
-#tic-tac-2{
-    background: red;
-    grid-area: 2 / 2 / 2 / 2;
-}
-#tic-tac-3{
-    background: red;
-}
-#tic-tac-4{
-    background: red;
-}
-#tic-tac-5{
-    background: red;
-}
-#tic-tac-6{
-    background: red;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 
 }
+#tic-tac-1{
+    /* justify-content: center; */
+    /* align-items: center; */
+    text-align: center;
+    border-right: 5px solid black;
+    border-bottom: 5px solid black;
+}
+#tic-tac-2{
+    /* grid-area: 2 / 2 / span 1 / span 1; */
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    border-bottom: 5px solid black;
+}
+#tic-tac-3{
+    border-bottom: 5px solid black;
+    border-left: 5px solid black;
+}
+#tic-tac-4{
+    /* grid-area: 1 / 4 / span 1 / span 1; */
+    border-right: 5px solid black;
+    border-bottom: 5px solid black;
+    border-top: 5px solid black;
+}
+#tic-tac-5{
+    /* grid-area: tic-tac-1; */
+    border: 5px solid black;
+}
+#tic-tac-6{
+    border-top: 5px solid black;
+    border-bottom: 5px solid black;
+    border-left: 5px solid black;
+    
+}
 #tic-tac-7{
-    background: red;
+    border-right: 5px solid black;
+    border-top: 5px solid black;
 }
 #tic-tac-8{
-    background: red;
-    grid-area: 3 / 2 / span 1 / span 1;
+    border-right: 5px solid black;
+    border-left: 5px solid black;
+    border-top: 5px solid black;
+    /* grid-area: 3 / 2 / span 1 / span 1; */
 }
 #tic-tac-9{
-    background: red;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
+}
+
+#player-container{
+
+}
+
+#player1{
+    display: none;
+    color: red;
+}
+#player2{
+    display: none;
+    color: blue;
 }
