--- a/css/webStyle.css
+++ b/css/webStyle.css
@@ -98,6 +98,7 @@ a{
 
 #body-3{
     background: white;
+    /* height: 2000px; */
 }
 #body-3 h2{
     color: rgba(0, 79, 148, 0.694);
@@ -210,6 +211,16 @@ a{
 
 }
 
+#tic-tac-button{
+    font-size: 20px;
+    color: black;
+    border: 5px solid black;
+    border-radius: 50px;
+    background: aqua;
+}
+#tic-tac-hidden{
+    display: none;
+}
 
 
 .tic-tac-container{
@@ -237,57 +248,57 @@ a{
     min-height: 100px;
     min-width: 100px;
     background: black;
-    font-size: 25px;
+    font-size: 50px;
     text-align: center;
     justify-content: center;
     align-items: center;
     cursor: pointer;
 
 }
-#tic-tac-1{
+#tic-tac-0{
     /* justify-content: center; */
     /* align-items: center; */
     text-align: center;
     border-right: 5px solid black;
     border-bottom: 5px solid black;
 }
-#tic-tac-2{
+#tic-tac-1{
     /* grid-area: 2 / 2 / span 1 / span 1; */
     border-left: 5px solid black;
     border-right: 5px solid black;
     border-bottom: 5px solid black;
 }
-#tic-tac-3{
+#tic-tac-2{
     border-bottom: 5px solid black;
     border-left: 5px solid black;
 }
-#tic-tac-4{
+#tic-tac-3{
     /* grid-area: 1 / 4 / span 1 / span 1; */
     border-right: 5px solid black;
     border-bottom: 5px solid black;
     border-top: 5px solid black;
 }
-#tic-tac-5{
+#tic-tac-4{
     /* grid-area: tic-tac-1; */
     border: 5px solid black;
 }
-#tic-tac-6{
+#tic-tac-5{
     border-top: 5px solid black;
     border-bottom: 5px solid black;
     border-left: 5px solid black;
     
 }
-#tic-tac-7{
+#tic-tac-6{
     border-right: 5px solid black;
     border-top: 5px solid black;
 }
-#tic-tac-8{
+#tic-tac-7{
     border-right: 5px solid black;
     border-left: 5px solid black;
     border-top: 5px solid black;
     /* grid-area: 3 / 2 / span 1 / span 1; */
 }
-#tic-tac-9{
+#tic-tac-8{
     border-top: 5px solid black;
     border-left: 5px solid black;
 }
@@ -303,4 +314,53 @@ a{
 #player2{
     display: none;
     color: blue;
+}
+#winner-1{
+    display: none;
+    color: red;
+}
+#winner-2{
+    display: none;
+    color: blue;
+}
+
+/* @media screenType and mediaQuerySelector  */
+/* default is all */
+/* use , for or instead of and */
+@media all and (max-width: 500px){
+    body{
+        background: yellow;
+    }
+    /* anything less than 500px */
+    
+}
+
+#spooky{
+    width: 200px;
+    text-align: center;
+    border-radius: 30px;
+    background: linear-gradient(to right,red, orange, yellow, white);
+    /* -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+    animation: red-to-black 4s linear 0s infinite alternate forwards;
+}
+
+@keyframes red-to-black {
+    /* from{
+        background: red;
+        transform: translate(0px, 0px);
+    }
+    to{
+        background: black;
+        transform: translate(20px, 20px);
+    } */
+
+    /* sample{} */
+    0% {background: red;
+        transform: translate(0px, 0px);}
+    50% {background: yellow;
+        transform: translate(10px, 10px);}
+    100% {background: black;
+        color: red;
+        transform: translate(20px, 20px);}
 }
